2008-31-01 version 4.0alpha2
  * added GPL licence file
  * generalized fiber.py by using generator name instead of hardcoded string
  * removing partial file in cache after 403 forbidden
  * flushing every line in debug mode
  * fix: no longer setting mtime to -1 if server does not send Last-Modified
  * fix: handling empty command lines correctly

2008-01-01 version 4.0alpha1
  * rewrite from scratch
  * replaced restrictive asyncore scheduler with new 'fiber' system
  * new feature: server-side download resuming
  * new feature: fpt support
  * new feature: bandwidth shaping
  * new feature: ipv6 support
  * new feature: frozen transactions killed after configurable timeout
  * new feature: rudimentary off-line mode
  * fixed race condition that prevented joining of simultaneously started downloads
  * currently missing feature: cache browsing

2004-11-27 version 3.0
  * new feature: cache brower on proxy address
  * new feature: client-side support for partial content
  * added alias option for caching mirrors on same location
  * added check to prevent access outside of cache through symlinks
  * added header length restriction to fight infinite request server attacks
  * created man pages for http-replicator and http-replicator_maintenance
  * fixed timestamp bug; files are now properly closed before changing mtime
  * suppressed size warning for chunked data

2004-08-15 version 2.1
  * integrated daemon code in http-replicator
  * changed init.d and cron script to bash
  * moved settings from configuration file to /etc/default/http-replicator
  * introduced optparse module for command line parsing
  * introduced logging module for output
  * added support for an external proxy server
  * added support for an external proxy requiring authentication

2004-05-01 version 2.0
  * added support for HTTP/1.1
  * replicator is now suitable for maintaining a gentoo package cache
  * fixed problem with absolute urls
  * added posting support