@@ -1,4 +1,4 @@
-import Params, os
+import Params, os, hashlib
 
 
 def makedirs( path ):
@@ -19,6 +19,14 @@ class File:
   mtime = -1
 
   def __init__( self, path ):
+
+    if Params.MAXFILELEN > -1:
+      newpath = os.sep.join( item if len(item) <= Params.MAXFILELEN else 
+        item[:Params.MAXFILELEN-34] + '..' + hashlib.md5( item[Params.MAXFILELEN-34:] ).hexdigest()
+          for item in path.split( os.sep ) )
+      if newpath != path:
+        print 'Shortened path to %s characters' % '/'.join( str(len(w)) for w in newpath.split(os.sep) )
+        path = newpath
 
     sep = path.find( '?' )
     if sep != -1:
